# bfme2replaybot

./: .dockerignore  .env.example  .gitignore  BFME2_REPLAY_FORMAT.md  Cargo.toml  DISCORD_SETUP.md  Dockerfile  RANDOM_COLOR_REVERSE_ENGINEERING.md  README.md  WINNER_DETECTION.md  ai-discussions.md  check_replay.py  render_map.py
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/bot/: archive.rs  commands.rs  constants.rs  handler.rs  messages.rs  mod.rs  pagination.rs  setup.rs
src/models/: mod.rs  replay.rs
src/parser/: mod.rs  prng.rs  replay.rs
src/renderer/: map.rs  mod.rs
tests/: integration_tests.rs
